fixed japanese button layout on mobile

--- a/shirogen/src/components/MainJapaneseQuiz/MainJapaneseQuiz.module.css
+++ b/shirogen/src/components/MainJapaneseQuiz/MainJapaneseQuiz.module.css
@@ -33,7 +33,7 @@
 @media (max-width: 500px) {
   .multipleChoiceContainer {
     flex-direction: column;
-    gap: 0.75rem;
+    gap: 0rem;
   }
   .multipleChoiceButton {
     min-width: 200px;
